Feat/bid (#14)
* feat : 입찰(Bid) 도메인 캐싱 처리
입찰 관련 데이터 저장소 변경 RDB -> Redis
입찰 내역 조회, 단일 상품 조회 로직 수정

* feat : ECS 자동 배포 기능 추가

* CICD 테스트

* CICD 테스트2

* CICD 테스트3

* CICD 테스트4

* CICD 테스트5

* CICD 테스트6

* CICD 테스트7

* CICD 테스트8

* 액션 브랜치 변경

* feat : 입찰 캐싱 전략 수정
Bid <-> Item 연관관계 해제

* feat : 입찰 캐싱 전략 수정
DTO 수정 및 조회 로직 변경

* feat : 입찰 캐싱 전략 수정
DTO 수정 및 조회 로직 변경

* feat : 상품 상태에 따른 입찰 예외 처리

* feat : 캐시 데이터 TTL 설정 (12시간)

* feat : 입찰 시 Redis를 통해 가격 업데이트 이벤트 발행

---------

Co-authored-by: 김상엽 <54929479+KIM-TABLE-NEXT@users.noreply.github.com>